--- a/demoapp/build.gradle
+++ b/demoapp/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 26
     defaultConfig {
         applicationId "com.example.demoapp"
-        minSdkVersion 15
+        minSdkVersion 14
         targetSdkVersion 26
         versionCode 1
         versionName "1.0"
@@ -24,28 +24,28 @@ dependencies {
     })
     testCompile 'junit:junit:4.12'
 
-//    implementation project(':htextview-base')
-//    implementation project(':htextview-line')
-//    implementation project(':htextview-fade')
-//    implementation project(':htextview-rainbow')
-//    implementation project(':htextview-typer')
-//    implementation project(':htextview-scale')
-//    implementation project(':htextview-evaporate')
-//    implementation project(':htextview-fall')
+    implementation project(':htextview-base')
+    implementation project(':htextview-line')
+    implementation project(':htextview-fade')
+    implementation project(':htextview-rainbow')
+    implementation project(':htextview-typer')
+    implementation project(':htextview-scale')
+    implementation project(':htextview-evaporate')
+    implementation project(':htextview-fall')
 
     // optional
     implementation 'com.android.support:appcompat-v7:26.1.0'
 
     def htextview_version = "0.1.2"
 
-    implementation "com.hanks:htextview-base:$htextview_version"    // base library
-
-    implementation "com.hanks:htextview-fade:$htextview_version"        // optional
-    implementation "com.hanks:htextview-line:$htextview_version"        // optional
-    implementation "com.hanks:htextview-rainbow:$htextview_version"     // optional
-    implementation "com.hanks:htextview-typer:$htextview_version"       // optional
-
-    implementation "com.hanks:htextview-scale:$htextview_version"       // optional
-    implementation "com.hanks:htextview-evaporate:$htextview_version"   // optional
-    implementation "com.hanks:htextview-fall:$htextview_version"        // optional
+//    implementation "com.hanks:htextview-base:$htextview_version"    // base library
+//
+//    implementation "com.hanks:htextview-fade:$htextview_version"        // optional
+//    implementation "com.hanks:htextview-line:$htextview_version"        // optional
+//    implementation "com.hanks:htextview-rainbow:$htextview_version"     // optional
+//    implementation "com.hanks:htextview-typer:$htextview_version"       // optional
+//
+//    implementation "com.hanks:htextview-scale:$htextview_version"       // optional
+//    implementation "com.hanks:htextview-evaporate:$htextview_version"   // optional
+//    implementation "com.hanks:htextview-fall:$htextview_version"        // optional
 }
